--- a/Prototype/prototype_frontEnd.html
+++ b/Prototype/prototype_frontEnd.html
@@ -63,12 +63,12 @@
     <div class="rounded-edge">
         <div class="rounded"></div>
     </div>
-    <div class="scale-content">
-        <div class="character">
+    <div class="Characters">
+        <div class="character1">
             <img src="" alt="">
         </div>
-        <div class="character"></div>
-        <div class="character"></div>
-        <div class="character"></div>
+        <div class="character2"></div>
+        <div class="character3"></div>
+        <div class="character4"></div>
     </div>
 </section>
